Fixing post header text alignment

--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -171,7 +171,8 @@
     }
 }
 
-.post-header,
+.post-header h1,
+.post-header .caption,
 .post-info {
     text-align: left !important;
 }
